--- a/about.html
+++ b/about.html
@@ -122,11 +122,11 @@
 				<div class="row">
 					<div class="col">
 						<div class="home_content">
-							<div class="home_title">About <span>CareMed</span></div>
+							<div class="home_title">About <span>Marie</span></div>
 							<div class="breadcrumbs">
 								<ul>
 									<li><a href="#">Home</a></li>
-									<li>About Caremed</li>
+									<li>About Marie</li>
 								</ul>
 							</div>
 						</div>
@@ -144,10 +144,14 @@
 
 				<!-- About Content -->
 				<div class="col-lg-8">
-					<div class="section_title"><h2>A great medical team to help your needs</h2></div>
+					<div class="section_title"><h2>About Us</h2></div>
 					<div class="about_text">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin. Aliquam nec dapibus massa. Pellen tesque in luctus ex. Praesent luctus erat sit amet tortor aliquam bibendum. Nulla ut molestie augue, scelerisque consectetur quam. Dolor sit amet, consectetur adipiscing elit. Cura bitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin. Aliquam nec dapibus massa. Pellentesque in luctus ex.</p>
-						<p>Praesent luctus erat sit amet tortor aliquam bibendum. Nulla ut molestie augue, scelerisque consectetur quam. Dolor sit amet, consectetur adipiscing elit. Cura bitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin. Aliquam nec dapibus massa. Pellentesque in luctus ex.</p>
+						<p>We're here when you need us. For everyday care or life-changing care, you can count on us to keep you and your
+							 loved ones safe and healthy. Our team of dedicated general praatitioners, and specialists with immense local and
+							  interenational experience, employ the latest technological advancements in the medical realm that enable Mariehealth offer
+							  reliable diagnoses and interventions to our clients.</p>
+						<p>Mariehealth Services enriches the community with great medical services making our patients to be the Priority in 
+							our services that we offer. Here to Serve! </p>
 					</div>
 					<div class="row loaders_container">
 						<div class="col-md-3 loader_col">
@@ -199,15 +203,15 @@
 					<div class="box box_appointments">
 						<div class="box_icon d-flex flex-column align-items-start justify-content-center"><div style="width: 29px; height:29px;"><img src="images/phone-call.svg" alt=""></div></div>
 						<div class="box_title">Appointments</div>
-						<div class="box_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam cons equat semper sollicitudin.</div>
+						<div class="box_text">We value getting to plan having you in advance for a better service. Feel free and make Appointment</div>
 					</div>
 
 					<!-- Box -->
 					<div class="box box_emergency">
 						<div class="box_icon d-flex flex-column align-items-start justify-content-center"><div style="width: 37px; height:37px; margin-left:-4px;"><img src="images/bell.svg" alt=""></div></div>
 						<div class="box_title">Emergency Cases</div>
-						<div class="box_phone">+56 273 45678 235</div>
-						<div class="box_emergency_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo.</div>
+						<div class="box_phone">+256 772 413686</div>
+						<div class="box_emergency_text">Here to serve</div>
 					</div>
 
 				</div>
@@ -231,10 +235,12 @@
 				<div class="col-lg-6 test_col">
 					<div class="testimonial">
 						<div class="test_icon d-flex flex-column align-items-center justify-content-center"><img src="images/quote.png" alt=""></div>
-						<div class="test_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin. Aliquam nec dap ibus massa. Pellen tesque in luctus ex. Praesent luctus erat sit amet torto.</div>
+						<div class="test_text">If i stay next to Maria Healthcare, I would actually recommend it for the all the neighborhood because the one time i was there the service was amazing. 
+							Thank You management.
+						</div>
 						<div class="test_author d-flex flex-row align-items-center justify-content-start">
 							<div class="test_author_image"><div><img src="images/test_1.jpg" alt=""></div></div>
-							<div class="test_author_name"><a href="#">Claire Smith</a>, <span>Patient</span></div>
+							<div class="test_author_name"><a href="#">Sedrick Otolo</a>, <span>Patient</span></div>
 						</div>
 					</div>
 				</div>
@@ -243,10 +249,10 @@
 				<div class="col-lg-6 test_col">
 					<div class="testimonial">
 						<div class="test_icon d-flex flex-column align-items-center justify-content-center"><img src="images/quote.png" alt=""></div>
-						<div class="test_text">Slor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin. Aliquam nec dap ibus massa. Pellen tesque in luctus ex. Praesent luctus erat sit amet tortor aliquam bibendum.</div>
+						<div class="test_text">Maria makes me have no description of how nice and hard working their staffs are! Very informed staffs and they know very well what they are doing.</div>
 						<div class="test_author d-flex flex-row align-items-center justify-content-start">
 							<div class="test_author_image"><div><img src="images/test_2.jpg" alt=""></div></div>
-							<div class="test_author_name"><a href="#">Mick Williams</a>, <span>Patient</span></div>
+							<div class="test_author_name"><a href="#">Agatha Racheal</a>, <span>Patient</span></div>
 						</div>
 					</div>
 				</div>
@@ -269,9 +275,9 @@
 				<!-- Team Member -->
 				<div class="col-lg-3 team_col">
 					<div class="team_member">
-						<div class="team_member_image d-flex flex-column align-items-center justify-content-end"><img src="images/team_1.png" alt=""></div>
+						<div class="team_member_image d-flex flex-column align-items-center justify-content-end"><img src="images/sed.jpg" alt=""></div>
 						<div class="team_member_info">
-							<div class="team_member_name"><a href="#">Dr. Melissa Smith</a></div>
+							<div class="team_member_name"><a href="#">Dr. Melissa </a></div>
 							<div class="team_member_title">Cardiologist</div>
 						</div>
 					</div>
@@ -280,9 +286,9 @@
 				<!-- Team Member -->
 				<div class="col-lg-3 team_col">
 					<div class="team_member">
-						<div class="team_member_image d-flex flex-column align-items-center justify-content-end"><img src="images/team_2.png" alt=""></div>
+						<div class="team_member_image d-flex flex-column align-items-center justify-content-end"><img src="images/sed.jpg" alt=""></div>
 						<div class="team_member_info">
-							<div class="team_member_name"><a href="#">Dr. Josh Henderson</a></div>
+							<div class="team_member_name"><a href="#">Dr. Josh </a></div>
 							<div class="team_member_title">Plastic Surgeon</div>
 						</div>
 					</div>
@@ -291,9 +297,9 @@
 				<!-- Team Member -->
 				<div class="col-lg-3 team_col">
 					<div class="team_member">
-						<div class="team_member_image d-flex flex-column align-items-center justify-content-end"><img src="images/team_3.png" alt=""></div>
+						<div class="team_member_image d-flex flex-column align-items-center justify-content-end"><img src="images/sed.jpg" alt=""></div>
 						<div class="team_member_info">
-							<div class="team_member_name"><a href="#">Dr. Christinne Jones</a></div>
+							<div class="team_member_name"><a href="#">Dr. Christinne </a></div>
 							<div class="team_member_title">Pediatrist</div>
 						</div>
 					</div>
@@ -302,9 +308,9 @@
 				<!-- Team Member -->
 				<div class="col-lg-3 team_col">
 					<div class="team_member">
-						<div class="team_member_image d-flex flex-column align-items-center justify-content-end"><img src="images/team_4.png" alt=""></div>
+						<div class="team_member_image d-flex flex-column align-items-center justify-content-end"><img src="images/sed.jpg" alt=""></div>
 						<div class="team_member_info">
-							<div class="team_member_name"><a href="#">Dr. William Stan</a></div>
+							<div class="team_member_name"><a href="#">Dr. William </a></div>
 							<div class="team_member_title">General Practicioner</div>
 						</div>
 					</div>
