--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>CareMed</title>
+<title>Marie Healthcare</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="CareMed demo project">
@@ -61,6 +61,8 @@
 		</div>
 
 		<!-- Logo -->
+	
+		
 		<div class="logo_container_outer">
 			<div class="container">
 				<div class="row">
@@ -70,10 +72,13 @@
 								<div class="logo_content d-flex flex-column align-items-start justify-content-center">
 									<div class="logo_line"></div>
 									<div class="logo d-flex flex-row align-items-center justify-content-center">
-										<div class="logo_text">Care<span>Med</span></div>
+										<img src='images/logo.jpeg'>
+
+										<!---->
+										<div class="logo_text"><span></span></div>
 										<div class="logo_box">+</div>
 									</div>
-									<div class="logo_sub">Health Care Center</div>
+									<div class="logo_sub"></div>
 								</div>
 							</a>
 						</div>
@@ -128,12 +133,12 @@
 							<div class="row">
 								<div class="col">
 									<div class="home_content_inner">
-										<div class="home_title"><h1>Medicine made with care</h1></div>
+										<div class="home_title"><h1>Marie Healthcare Services</h1></div>
 										<div class="home_text">
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tempus vestibulum mauris quis aliquam. Integer accumsan sodales odio, id tempus velit ullamcorper id. Quisque at erat eu.</p>
+											<p>Your Health our Priority</p>
 										</div>
 										<div class="button home_button">
-											<a href="#">read more</a>
+											<a href="#">read more from here</a>
 										</div>
 									</div>
 								</div>
@@ -150,9 +155,9 @@
 							<div class="row">
 								<div class="col">
 									<div class="home_content_inner">
-										<div class="home_title"><h1>Medicine made with care</h1></div>
+										<div class="home_title"><h1>Medicare</h1></div>
 										<div class="home_text">
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tempus vestibulum mauris quis aliquam. Integer accumsan sodales odio, id tempus velit ullamcorper id. Quisque at erat eu.</p>
+											<p>Comfort brings wellness</p>
 										</div>
 										<div class="button home_button">
 											<a href="#">read more</a>
@@ -228,7 +233,7 @@
 					<div class="box box_appointments">
 						<div class="box_icon d-flex flex-column align-items-start justify-content-center"><div style="width: 29px; height:29px;"><img src="images/phone-call.svg" alt=""></div></div>
 						<div class="box_title">Appointments</div>
-						<div class="box_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam cons equat semper sollicitudin.</div>
+						<div class="box_text">Call Us today and make Appointment to meet our doctors or come to the premises.</div>
 					</div>
 				</div>
 
@@ -237,8 +242,8 @@
 					<div class="box box_emergency">
 						<div class="box_icon d-flex flex-column align-items-start justify-content-center"><div style="width: 37px; height:37px; margin-left:-4px;"><img src="images/bell.svg" alt=""></div></div>
 						<div class="box_title">Emergency Cases</div>
-						<div class="box_phone">+56 273 45678 235</div>
-						<div class="box_emergency_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo.</div>
+						<div class="box_phone">+256 772 413686</div>
+						<div class="box_emergency_text">Just a call away</div>
 					</div>
 				</div>
 
@@ -255,9 +260,12 @@
 				<!-- About Content -->
 				<div class="col-lg-7">
 					<div class="about_content">
-						<div class="section_title"><h2>A great medical team to help your needs</h2></div>
+						<div class="section_title"><h2>At Mariehealth Services</h2></div>
 						<div class="about_text">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin. Aliquam nec dapibus massa. Pellen tesque in luctus ex. Praesent luctus erat sit amet tortor aliquam bibendum. Nulla ut molestie augue, scelerisque consectetur quam. Dolor sit amet, consectetur adipiscing elit. Cura bitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin. Aliquam nec dapibus massa. Pellentesque in luctus ex.</p>
+							<p>Marie Healthcare Service is a health center situated in the hearts of Kampala to serve 
+								the community with amazing health services from Children to Adults. We have a great medical team 
+								that will help meet the needs of our clients perfectly. 
+							</p>
 						</div>
 						<div class="button about_button">
 							<a href="#">read more</a>
@@ -267,7 +275,7 @@
 
 				<!-- About Image -->
 				<div class="col-lg-5">
-					<div class="about_image"><img src="images/about.png" alt=""></div>
+					<div class="about_image"><img src="images/front.jpeg" alt=""></div>
 				</div>
 			</div>
 		</div>
@@ -288,9 +296,9 @@
 				<!-- Department -->
 				<div class="col-lg-3 col-md-6 dept_col">
 					<div class="dept">
-						<div class="dept_image"><img src="images/dept_1.jpg" alt=""></div>
+						<div class="dept_image"><img src="images/1.jpeg" alt=""></div>
 						<div class="dept_content text-center">
-							<div class="dept_title">plastic surgery</div>
+							<div class="dept_title">Pharmacy</div>
 							<div class="dept_subtitle">Dr. James Smith</div>
 						</div>
 					</div>
@@ -299,9 +307,9 @@
 				<!-- Department -->
 				<div class="col-lg-3 col-md-6 dept_col">
 					<div class="dept">
-						<div class="dept_image"><img src="images/dept_2.jpg" alt=""></div>
+						<div class="dept_image"><img src="images/dental.jpeg" alt=""></div>
 						<div class="dept_content text-center">
-							<div class="dept_title">gastroenterology</div>
+							<div class="dept_title">Dental Lab</div>
 							<div class="dept_subtitle">Dr. Gunter Roscoe</div>
 						</div>
 					</div>
@@ -310,9 +318,9 @@
 				<!-- Department -->
 				<div class="col-lg-3 col-md-6 dept_col">
 					<div class="dept">
-						<div class="dept_image"><img src="images/dept_3.jpg" alt=""></div>
+						<div class="dept_image"><img src="images/3.jpeg" alt=""></div>
 						<div class="dept_content text-center">
-							<div class="dept_title">dentistry</div>
+							<div class="dept_title">Blood Screening</div>
 							<div class="dept_subtitle">Dr. Maria Williams</div>
 						</div>
 					</div>
@@ -322,7 +330,7 @@
 				<div class="col-lg-3 col-md-6 dept_col">
 					<div class="dept">
 						<div class="dept_text">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin. Aliquam nec dap ibus massa. Pellen tesque in luctus ex.</p>
+							<p>Our services are offered with the new technologies making us have better medical services</p>
 						</div>
 						<div class="button dept_button"><a href="#">read more</a></div>
 					</div>
@@ -432,7 +440,7 @@
 				<div class="col">
 					<div class="cta_content text-center">
 						<h2>Need a personal health plan?</h2>
-						<p>Duis massa massa, mollis vel ullamcorper quis, finibus et urna. Aliquam ac eleifend metus. Ut sollicitudin risus ex</p>
+						<p>We offere personal health plans that helps you stay health, fit and enjoying the best of your life!</p>
 						<div class="button cta_button"><a href="#">request a plan</a></div>
 					</div>
 				</div>
