--- a/services.html
+++ b/services.html
@@ -70,10 +70,10 @@
 								<div class="logo_content d-flex flex-column align-items-start justify-content-center">
 									<div class="logo_line"></div>
 									<div class="logo d-flex flex-row align-items-center justify-content-center">
-										<div class="logo_text">Care<span>Med</span></div>
+										<div class="logo_text">Maria Healthcenter<span>Services</span></div>
 										<div class="logo_box">+</div>
 									</div>
-									<div class="logo_sub">Health Care Center</div>
+									<div class="logo_sub">SERVICES</div>
 								</div>
 							</a>
 						</div>
@@ -122,7 +122,7 @@
 				<div class="row">
 					<div class="col">
 						<div class="home_content">
-							<div class="home_title"><span>CareMed</span> Services</div>
+							<div class="home_title"><span>Maria Healthcare</span> Services</div>
 							<div class="breadcrumbs">
 								<ul>
 									<li><a href="#">Home</a></li>
@@ -148,78 +148,139 @@
 			<div class="row services_row">
 				
 				<!-- Service -->
-				<div class="col-lg-4 col-md-6 service_col">
+				<div class="col-lg-3 col-md-6 service_col">
 					<a href="services.html">
 						<div class="service text-center trans_200">
 							<div class="service_icon"><img class="svg" src="images/service_1.svg" alt=""></div>
-							<div class="service_title trans_200">Free Checkups</div>
+							<div class="service_title trans_200">Immunisation </div>
 							<div class="service_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin.</p>
+								<p></p>
 							</div>
 						</div>
 					</a>
 				</div>
 
 				<!-- Service -->
-				<div class="col-lg-4 col-md-6 service_col">
+				<div class="col-lg-3 col-md-6 service_col">
 					<a href="services.html">
 						<div class="service text-center trans_200">
 							<div class="service_icon"><img class="svg" src="images/service_2.svg" alt=""></div>
-							<div class="service_title trans_200">Screening Exams</div>
+							<div class="service_title trans_200">Test for Hepatatis B</div>
 							<div class="service_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin.</p>
+								<p></p>
 							</div>
 						</div>
 					</a>
 				</div>
 
 				<!-- Service -->
-				<div class="col-lg-4 col-md-6 service_col">
+				<div class="col-lg-3 col-md-6 service_col">
 					<a href="services.html">
 						<div class="service text-center trans_200">
 							<div class="service_icon"><img class="svg" src="images/service_3.svg" alt=""></div>
-							<div class="service_title trans_200">RMI Services</div>
+							<div class="service_title trans_200"> Hepatatis Vaccination </div>
 							<div class="service_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin.</p>
+								<p></p>
 							</div>
 						</div>
 					</a>
 				</div>
 
 				<!-- Service -->
-				<div class="col-lg-4 col-md-6 service_col">
+				<div class="col-lg-3 col-md-6 service_col">
 					<a href="services.html">
 						<div class="service text-center trans_200">
 							<div class="service_icon"><img class="svg" src="images/service_4.svg" alt=""></div>
-							<div class="service_title trans_200">Dentistry</div>
+							<div class="service_title trans_200">Ultra Sound Scan</div>
 							<div class="service_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin.</p>
+								<p></p>
 							</div>
 						</div>
 					</a>
 				</div>
 
 				<!-- Service -->
-				<div class="col-lg-4 col-md-6 service_col">
+				<div class="col-lg-3 col-md-6 service_col">
 					<a href="services.html">
 						<div class="service text-center trans_200">
 							<div class="service_icon"><img class="svg" src="images/service_5.svg" alt=""></div>
-							<div class="service_title trans_200">Neonatology</div>
+							<div class="service_title trans_200">Clinical Services</div>
 							<div class="service_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin.</p>
+								<p></p>
 							</div>
 						</div>
 					</a>
 				</div>
 
 				<!-- Service -->
-				<div class="col-lg-4 col-md-6 service_col">
+				<div class="col-lg-3 col-md-6 service_col">
 					<a href="services.html">
 						<div class="service text-center trans_200">
 							<div class="service_icon"><img class="svg" src="images/service_6.svg" alt=""></div>
-							<div class="service_title trans_200">Biochemistry</div>
+							<div class="service_title trans_200">Laboratoy Services</div>
 							<div class="service_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin.</p>
+								<p></p>
+							</div>
+						</div>
+					</a>
+				</div>
+
+				<!-- Service -->
+				<div class="col-lg-3 col-md-6 service_col">
+					<a href="services.html">
+						<div class="service text-center trans_200">
+							<div class="service_icon"><img class="svg" src="images/service_6.svg" alt=""></div>
+							<div class="service_title trans_200">Haematology Analysis Tests</div>
+							<div class="service_text">
+								<p></p>
+							</div>
+						</div>
+					</a>
+				</div>
+				<!-- Service -->
+				<div class="col-lg-3 col-md-6 service_col">
+					<a href="services.html">
+						<div class="service text-center trans_200">
+							<div class="service_icon"><img class="svg" src="images/service_6.svg" alt=""></div>
+							<div class="service_title trans_200">Chemistry Services</div>
+							<div class="service_text">
+								<p></p>
+							</div>
+						</div>
+					</a>
+				</div>
+				<!-- Service -->
+				<div class="col-lg-3 col-md-6 service_col">
+					<a href="services.html">
+						<div class="service text-center trans_200">
+							<div class="service_icon"><img class="svg" src="images/service_6.svg" alt=""></div>
+							<div class="service_title trans_200">Medical Services</div>
+							<div class="service_text">
+								<p></p>
+							</div>
+						</div>
+					</a>
+				</div>
+				<!-- Service -->
+				<div class="col-lg-3 col-md-6 service_col">
+					<a href="services.html">
+						<div class="service text-center trans_200">
+							<div class="service_icon"><img class="svg" src="images/service_6.svg" alt=""></div>
+							<div class="service_title trans_200">Anatenal Services</div>
+							<div class="service_text">
+								<p></p>
+							</div>
+						</div>
+					</a>
+				</div>
+				<!-- Service -->
+				<div class="col-lg-3 col-md-6 service_col">
+					<a href="services.html">
+						<div class="service text-center trans_200">
+							<div class="service_icon"><img class="svg" src="images/service_6.svg" alt=""></div>
+							<div class="service_title trans_200">Dental Services</div>
+							<div class="service_text">
+								<p></p>
 							</div>
 						</div>
 					</a>
@@ -238,11 +299,11 @@
 						
 						<!-- Feature -->
 						<div class="feature">
-							<div class="feature_image"><img src="images/features_1.jpg" alt=""></div>
+							<div class="feature_image"><img src="images/dental1.jpeg" alt=""></div>
 							<div class="feature_content">
 								<div class="section_title"><h2>We help you</h2></div>
 								<div class="feature_text">
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semp er solli citudin. Aliquam nec dapibus massa.</p>
+									<p>The Center is well-equipped and extends Preventive, Conservative, Rehabilitative and Cosmetical services to Patients.</p>
 								</div>
 							</div>
 						</div>
@@ -253,18 +314,18 @@
 							<div class="feature_content">
 								<div class="section_title"><h2>Medicine for you</h2></div>
 								<div class="feature_text">
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semp er solli citudin. Aliquam nec dapibus massa.</p>
+									<p> The center has in stock quality medicine All you can search for inorder to get relieved is at the center. </p>
 								</div>
 							</div>
 						</div>
 
 						<!-- Feature -->
 						<div class="feature">
-							<div class="feature_image"><img src="images/features_3.jpg" alt=""></div>
+							<div class="feature_image"><img src="images/dental.jpeg" alt=""></div>
 							<div class="feature_content">
 								<div class="section_title"><h2>Amazing technology</h2></div>
 								<div class="feature_text">
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semp er solli citudin. Aliquam nec dapibus massa.</p>
+									<p> well equipped with an amazing technologies to help sove your health problem. </p>
 								</div>
 							</div>
 						</div>
@@ -291,7 +352,8 @@
 					<div class="text_section_content">
 						<div class="section_title"><h2>A great medical team to help your needs</h2></div>
 						<div class="text_section_text">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin. Aliquam nec dapibus massa. Pellen tesque in luctus ex. Praesent luctus erat sit amet tortor aliquam bibendum. Nulla ut molestie augue, scelerisque consectetur quam. Dolor sit amet, consectetur adipiscing elit. Cura bitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin.</p>
+							<p>
+						 Improving quality of patient care and ensuring continuity of business in the clinical area.</p>
 						</div>
 						<div class="button text_section_button"><a href="#">read more</a></div>
 					</div>
@@ -331,7 +393,7 @@
 								<a href="#" class="d-flex flex-column align-items-center justify-content-center">
 									<div class="logo_content">
 										<div class="logo d-flex flex-row align-items-center justify-content-center">
-											<div class="logo_text">Care<span>Med</span></div>
+											<div class="logo_text">Maria<span>Healthcenter</span></div>
 											<div class="logo_box">+</div>
 										</div>
 										<div class="logo_sub">Health Care Center</div>
