--- a/services.html
+++ b/services.html
@@ -314,7 +314,7 @@
 							<div class="feature_content">
 								<div class="section_title"><h2>Medicine for you</h2></div>
 								<div class="feature_text">
-									<p> The center has in stock quality medicine All you can search for inorder to get relieved is at the center. </p>
+									<p> The center has in stock quality medicine and all you can search for inorder to get relieved is with us. </p>
 								</div>
 							</div>
 						</div>
@@ -350,10 +350,10 @@
 				<!-- Text Section Content -->
 				<div class="col-lg-7">
 					<div class="text_section_content">
-						<div class="section_title"><h2>A great medical team to help your needs</h2></div>
+						<div class="section_title"><h2>A great medical team</h2></div>
 						<div class="text_section_text">
 							<p>
-						 Improving quality of patient care and ensuring continuity of business in the clinical area.</p>
+						 Improving quality of patient care and ensuring continuity of business in the clinical area is what our team promises you.</p>
 						</div>
 						<div class="button text_section_button"><a href="#">read more</a></div>
 					</div>
