--- a/contact.html
+++ b/contact.html
@@ -70,10 +70,10 @@
 								<div class="logo_content d-flex flex-column align-items-start justify-content-center">
 									<div class="logo_line"></div>
 									<div class="logo d-flex flex-row align-items-center justify-content-center">
-										<div class="logo_text">Care<span>Med</span></div>
+										<div class="logo_text">Maria<span>Healthcenter</span></div>
 										<div class="logo_box">+</div>
 									</div>
-									<div class="logo_sub">Health Care Center</div>
+									<div class="logo_sub">Maria Health Center</div>
 								</div>
 							</a>
 						</div>
@@ -106,7 +106,7 @@
 			</div>
 			<div class="menu_extra">
 				<div class="menu_appointment"><a href="#">Request an Appointment</a></div>
-				<div class="menu_emergencies">For Emergencies: +563 47558 623</div>
+				<div class="menu_emergencies">For Emergencies: +256 7770000000</div>
 			</div>
 
 		</div>
@@ -122,7 +122,7 @@
 				<div class="row">
 					<div class="col">
 						<div class="home_content">
-							<div class="home_title"><span>CareMed</span> News</div>
+							<div class="home_title"><span>Maraia H/C</span> News</div>
 							<div class="breadcrumbs">
 								<ul>
 									<li><a href="#">Home</a></li>
@@ -146,12 +146,12 @@
 				<div class="col-lg-6">
 					<div class="section_title"><h2>Get in touch</h2></div>
 					<div class="contact_text">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin. Aliquam nec dapibus massa.</p>
+						<p></p>
 					</div>
 					<ul class="contact_about_list">
-						<li><div class="contact_about_icon"><img src="images/phone-call.svg" alt=""></div><span>+45 677 8993000 223</span></li>
+						<li><div class="contact_about_icon"><img src="images/phone-call.svg" alt=""></div><span>+256 7770000000</span></li>
 						<li><div class="contact_about_icon"><img src="images/envelope.svg" alt=""></div><span>office@template.com</span></li>
-						<li><div class="contact_about_icon"><img src="images/placeholder.svg" alt=""></div><span>Main Str. no 45-46, b3, 56832, Los Angeles, CA</span></li>
+						<li><div class="contact_about_icon"><img src="images/placeholder.svg" alt=""></div><span>Main Str. no 45-46, b3, 56832,Kampala</span></li>
 					</ul>
 				</div>
 
