--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Marie Healthcare</title>
+<title>Maria Healthcare</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="CareMed demo project">
@@ -29,8 +29,8 @@
 					<div class="col">
 						<div class="top_bar_content d-flex flex-row align-items-center justify-content-start">
 							<div class="top_bar_item"><a href="#">FAQ</a></div>
-							<div class="top_bar_item"><a href="#">Request an Appointment</a></div>
-							<div class="emergencies  d-flex flex-row align-items-center justify-content-start ml-auto">For Emergencies: +563 47558 623</div>
+							<div class="top_bar_item"><a href="mailto:mssendyona@yahoo.com">Request an Appointment</a></div>
+							<div class="emergencies  d-flex flex-row align-items-center justify-content-start ml-auto">For Emergencies: +256 772 413686</div>
 						</div>
 
 					</div>
@@ -72,13 +72,13 @@
 								<div class="logo_content d-flex flex-column align-items-start justify-content-center">
 									<div class="logo_line"></div>
 									<div class="logo d-flex flex-row align-items-center justify-content-center">
-										<img src='images/logo.jpeg'>
+										
 
 										<!---->
-										<div class="logo_text"><span></span></div>
+										<div class="logo_text">Maria <span></span></div>
 										<div class="logo_box">+</div>
 									</div>
-									<div class="logo_sub"></div>
+									<div class="logo_sub">Healthcare Services</div>
 								</div>
 							</a>
 						</div>
@@ -116,6 +116,7 @@
 
 		</div>
 
+		
 	</div>
 	
 	<!-- Home -->
@@ -127,13 +128,13 @@
 				
 				<!-- Slider Item -->
 				<div class="owl-item">
-					<div class="home_slider_background" style="background-image:url(images/home_background_1.jpg)"></div>
+					<div class="home_slider_background" style="background-image:url(images/front.jpeg)"></div>
 					<div class="home_content">
 						<div class="container">
 							<div class="row">
 								<div class="col">
 									<div class="home_content_inner">
-										<div class="home_title"><h1>Marie Healthcare Services</h1></div>
+										<div class="home_title"><h1>Maria Healthcare Services</h1></div>
 										<div class="home_text">
 											<p>Your Health our Priority</p>
 										</div>
@@ -155,7 +156,7 @@
 							<div class="row">
 								<div class="col">
 									<div class="home_content_inner">
-										<div class="home_title"><h1>Medicare</h1></div>
+										<div class="home_title"><h1>Maria Healthcare </h1></div>
 										<div class="home_text">
 											<p>Comfort brings wellness</p>
 										</div>
@@ -262,7 +263,7 @@
 					<div class="about_content">
 						<div class="section_title"><h2>At Mariahealth Services</h2></div>
 						<div class="about_text">
-							<p>Marie Healthcare Service is a health center situated in the hearts of Kampala to serve 
+							<p>Maria Healthcare Service is a health center situated in the hearts of Kampala to serve 
 								the community with amazing health services from Children to Adults. We have a great medical team 
 								that will help meet the needs of our clients perfectly. 
 							</p>
