--- a/services.html
+++ b/services.html
@@ -122,7 +122,7 @@
 				<div class="row">
 					<div class="col">
 						<div class="home_content">
-							<div class="home_title"><span>Maria Healthcare</span> Services</div>
+							<div class="home_title"><span>Maria Healthcare</span> </div>
 							<div class="breadcrumbs">
 								<ul>
 									<li><a href="#">Home</a></li>
