--- a/contact.html
+++ b/contact.html
@@ -29,8 +29,8 @@
 					<div class="col">
 						<div class="top_bar_content d-flex flex-row align-items-center justify-content-start">
 							<div class="top_bar_item"><a href="#">FAQ</a></div>
-							<div class="top_bar_item"><a href="#">Request an Appointment</a></div>
-							<div class="emergencies  d-flex flex-row align-items-center justify-content-start ml-auto">For Emergencies: +563 47558 623</div>
+							<div class="top_bar_item"><a href="mailto:mssendyona@yahoo.com">Request an Appointment</a></div>
+							<div class="emergencies  d-flex flex-row align-items-center justify-content-start ml-auto">For Emergencies: +256 772 413686</div>
 						</div>
 
 					</div>
@@ -61,6 +61,8 @@
 		</div>
 
 		<!-- Logo -->
+	
+		
 		<div class="logo_container_outer">
 			<div class="container">
 				<div class="row">
@@ -70,10 +72,13 @@
 								<div class="logo_content d-flex flex-column align-items-start justify-content-center">
 									<div class="logo_line"></div>
 									<div class="logo d-flex flex-row align-items-center justify-content-center">
-										<div class="logo_text">Maria<span>Healthcenter</span></div>
+										
+
+										<!---->
+										<div class="logo_text">Maria <span></span></div>
 										<div class="logo_box">+</div>
 									</div>
-									<div class="logo_sub">Maria Health Center</div>
+									<div class="logo_sub">Healthcare Services</div>
 								</div>
 							</a>
 						</div>
