--- a/services.html
+++ b/services.html
@@ -29,8 +29,8 @@
 					<div class="col">
 						<div class="top_bar_content d-flex flex-row align-items-center justify-content-start">
 							<div class="top_bar_item"><a href="#">FAQ</a></div>
-							<div class="top_bar_item"><a href="#">Request an Appointment</a></div>
-							<div class="emergencies  d-flex flex-row align-items-center justify-content-start ml-auto">For Emergencies: +563 47558 623</div>
+							<div class="top_bar_item"><a href="mailto:mssendyona@yahoo.com">Request an Appointment</a></div>
+							<div class="emergencies  d-flex flex-row align-items-center justify-content-start ml-auto">For Emergencies: +256 772 413686</div>
 						</div>
 
 					</div>
@@ -61,6 +61,8 @@
 		</div>
 
 		<!-- Logo -->
+	
+		
 		<div class="logo_container_outer">
 			<div class="container">
 				<div class="row">
@@ -70,10 +72,13 @@
 								<div class="logo_content d-flex flex-column align-items-start justify-content-center">
 									<div class="logo_line"></div>
 									<div class="logo d-flex flex-row align-items-center justify-content-center">
-										<div class="logo_text">Maria Healthcenter<span>Services</span></div>
+										
+
+										<!---->
+										<div class="logo_text">Maria <span></span></div>
 										<div class="logo_box">+</div>
 									</div>
-									<div class="logo_sub">SERVICES</div>
+									<div class="logo_sub">Healthcare Services</div>
 								</div>
 							</a>
 						</div>
@@ -371,7 +376,7 @@
 				<div class="col">
 					<div class="cta_content text-center">
 						<h2>Need a personal health plan?</h2>
-						<p>Duis massa massa, mollis vel ullamcorper quis, finibus et urna. Aliquam ac eleifend metus. Ut sollicitudin risus ex</p>
+						<p></p>
 						<div class="button cta_button"><a href="#">request a plan</a></div>
 					</div>
 				</div>
