--- a/services.html
+++ b/services.html
@@ -78,7 +78,7 @@
 										<div class="logo_text">Maria <span></span></div>
 										<div class="logo_box">+</div>
 									</div>
-									<div class="logo_sub">Healthcare Services</div>
+									<div class="logo_sub">Healthcare </div>
 								</div>
 							</a>
 						</div>
