--- a/about.html
+++ b/about.html
@@ -282,7 +282,7 @@
 					<div class="team_member">
 						<div class="team_member_image d-flex flex-column align-items-center justify-content-end"><img src="images/sed.jpg" alt=""></div>
 						<div class="team_member_info">
-							<div class="team_member_name"><a href="#">Dr. Melissa </a></div>
+							<div class="team_member_name"><a href="#">Dr. Sedrick </a></div>
 							<div class="team_member_title">Cardiologist</div>
 						</div>
 					</div>
