--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 									<li><a href="index.html">Home</a></li>
 									<li><a href="about.html">About us</a></li>
 									<li><a href="services.html">Services</a></li>
-									<li><a href="news.html">News</a></li>
+									<li><a href="gallery.html">Gallery</a></li>
 									<li><a href="contact.html">Contact</a></li>
 								</ul>
 							</nav>
@@ -105,7 +105,7 @@
 					<li class="menu_item menu_mm"><a href="index.html">Home</a></li>
 					<li class="menu_item menu_mm"><a href="about.html">About us</a></li>
 					<li class="menu_item menu_mm"><a href="services.html">Services</a></li>
-					<li class="menu_item menu_mm"><a href="news.html">News</a></li>
+					<li class="menu_item menu_mm"><a href="gallery.html">Gallery</a></li>
 					<li class="menu_item menu_mm"><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
@@ -261,7 +261,7 @@
 				<!-- About Content -->
 				<div class="col-lg-7">
 					<div class="about_content">
-						<div class="section_title"><h2>At Mariahealth Services</h2></div>
+						<div class="section_title"><h2>At Maria Healthcare Services</h2></div>
 						<div class="about_text">
 							<p>Maria Healthcare Service is a health center situated in the hearts of Kampala to serve 
 								the community with amazing health services from Children to Adults. We have a great medical team 
@@ -331,7 +331,9 @@
 				<div class="col-lg-3 col-md-6 dept_col">
 					<div class="dept">
 						<div class="dept_text">
-							<p>Our services are offered with the new technologies making us have better medical services</p>
+							<p>Our services are offered with the new technologies making us have better medical services. With the advanced 
+								technology, we are able to do more.
+							</p>
 						</div>
 						<div class="button dept_button"><a href="#">read more</a></div>
 					</div>
@@ -358,8 +360,7 @@
 							<div class="service_icon"><img class="svg" src="images/service_1.svg" alt=""></div>
 							<div class="service_title trans_200">Free Checkups</div>
 							<div class="service_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin.</p>
-							</div>
+											</div>
 						</div>
 					</a>
 				</div>
@@ -371,7 +372,7 @@
 							<div class="service_icon"><img class="svg" src="images/service_2.svg" alt=""></div>
 							<div class="service_title trans_200">Screening Exams</div>
 							<div class="service_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin.</p>
+								<p></p>
 							</div>
 						</div>
 					</a>
@@ -384,7 +385,7 @@
 							<div class="service_icon"><img class="svg" src="images/service_3.svg" alt=""></div>
 							<div class="service_title trans_200">RMI Services</div>
 							<div class="service_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin.</p>
+								<p></p>
 							</div>
 						</div>
 					</a>
@@ -397,7 +398,7 @@
 							<div class="service_icon"><img class="svg" src="images/service_4.svg" alt=""></div>
 							<div class="service_title trans_200">Dentistry</div>
 							<div class="service_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin.</p>
+								<p></p>
 							</div>
 						</div>
 					</a>
@@ -410,7 +411,7 @@
 							<div class="service_icon"><img class="svg" src="images/service_5.svg" alt=""></div>
 							<div class="service_title trans_200">Neonatology</div>
 							<div class="service_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin.</p>
+								<p></p>
 							</div>
 						</div>
 					</a>
@@ -423,7 +424,7 @@
 							<div class="service_icon"><img class="svg" src="images/service_6.svg" alt=""></div>
 							<div class="service_title trans_200">Biochemistry</div>
 							<div class="service_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin.</p>
+								<p></p>
 							</div>
 						</div>
 					</a>
@@ -492,7 +493,7 @@
 							<div class="footer_title">Useful Links</div>
 							<ul>
 								<li>
-									<div class="footer_news_title"><a href="news.html">Our News</a></div>
+									<div class="footer_news_title"><a href="gallery.html">Our Gallery</a></div>
 									<div class="footer_news_date">Feb 10, 2020</div>
 								</li>
 							
