--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
 									<li><a href="index.html">Home</a></li>
 									<li><a href="about.html">About us</a></li>
 									<li><a href="services.html">Services</a></li>
-									<li><a href="news.html">News</a></li>
+									<li><a href="news.html">Gallery</a></li>
 									<li><a href="contact.html">Contact</a></li>
 								</ul>
 							</nav>
@@ -78,7 +78,7 @@
 										<div class="logo_text">Maria <span></span></div>
 										<div class="logo_box">+</div>
 									</div>
-									<div class="logo_sub">Healthcare Services</div>
+									<div class="logo_sub">Healthcare </div>
 								</div>
 							</a>
 						</div>
