--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
 				<div class="row">
 					<div class="col">
 						<div class="home_content">
-							<div class="home_title"><span>Maraia H/C</span> Gallery</div>
+							<div class="home_title"><span>Maraia H/C</span> Contacts</div>
 							<div class="breadcrumbs">
 								<ul>
 									<li><a href="#">Home</a></li>
@@ -188,13 +188,13 @@
 
 						<!-- Google Map -->
 						
-						<div class="map">
-							<div id="google_map" class="google_map">
-								<div class="map_container">
-									<div id="map"></div>
-								</div>
-							</div>
-						</div>
+						<div id="map"></div>
+
+    <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap&libraries=&v=weekly"
+      async
+    ></script>
 
 						<!-- Working Hours -->
 						<div class="box working_hours">
