--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
 <title>Maria Healthcare</title>
+<style type="css/text">
+.homeh1{
+	color: white;
+}
+
+</style>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="CareMed demo project">
@@ -111,7 +117,7 @@
 			</div>
 			<div class="menu_extra">
 				<div class="menu_appointment"><a href="#">Request an Appointment</a></div>
-				<div class="menu_emergencies">For Emergencies: +563 47558 623</div>
+				<div class="menu_emergencies">For Emergencies: +256 77558 623</div>
 			</div>
 
 		</div>
@@ -134,7 +140,7 @@
 							<div class="row">
 								<div class="col">
 									<div class="home_content_inner">
-										<div class="home_title"><h1>Maria Healthcare Services</h1></div>
+										<div class="home_title"><h1 id="homeh1">Maria Healthcare Services</h1></div>
 										<div class="home_text">
 											<p>Your Health our Priority</p>
 										</div>
@@ -180,7 +186,7 @@
 									<div class="home_content_inner">
 										<div class="home_title"><h1>Medicine made with care</h1></div>
 										<div class="home_text">
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tempus vestibulum mauris quis aliquam. Integer accumsan sodales odio, id tempus velit ullamcorper id. Quisque at erat eu.</p>
+											<p>.</p>
 										</div>
 										<div class="button home_button">
 											<a href="#">read more</a>
