--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
 									<li><a href="index.html">Home</a></li>
 									<li><a href="about.html">About us</a></li>
 									<li><a href="services.html">Services</a></li>
-									<li><a href="news.html">Gallery</a></li>
+									<li><a href="gallery.html">Gallery</a></li>
 									<li><a href="contact.html">Contact</a></li>
 								</ul>
 							</nav>
@@ -105,7 +105,7 @@
 					<li class="menu_item menu_mm"><a href="index.html">Home</a></li>
 					<li class="menu_item menu_mm active"><a href="about.html">About us</a></li>
 					<li class="menu_item menu_mm"><a href="services.html">Services</a></li>
-					<li class="menu_item menu_mm"><a href="news.html">News</a></li>
+					<li class="menu_item menu_mm"><a href="gallery.html">Gallery/a></li>
 					<li class="menu_item menu_mm"><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
@@ -385,7 +385,7 @@
 							<div class="footer_title">Useful Links</div>
 							<ul>
 								<li>
-									<div class="footer_news_title"><a href="news.html">Our News</a></div>
+									<div class="footer_news_title"><a href="gallery.html">Our Gallery</a></div>
 									<div class="footer_news_date">Feb 10, 2020</div>
 								</li>
 							
