--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
 									<li><a href="index.html">Home</a></li>
 									<li><a href="about.html">About us</a></li>
 									<li><a href="services.html">Services</a></li>
-									<li><a href="gallery.html">Gallery</a></li>
+									<li><a href="gallery.html">Galler</a></li>
 									<li><a href="contact.html">Contact</a></li>
 								</ul>
 							</nav>
@@ -105,7 +105,7 @@
 					<li class="menu_item menu_mm"><a href="index.html">Home</a></li>
 					<li class="menu_item menu_mm"><a href="about.html">About us</a></li>
 					<li class="menu_item menu_mm"><a href="services.html">Services</a></li>
-					<li class="menu_item menu_mm"><a href="gallery.html">Gallery</a></li>
+					<li class="menu_item menu_mm"><a href="news.html">Gallery</a></li>
 					<li class="menu_item menu_mm"><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
@@ -127,7 +127,7 @@
 				<div class="row">
 					<div class="col">
 						<div class="home_content">
-							<div class="home_title"><span>Maraia H/C</span> Contacts</div>
+							<div class="home_title"><span>Maraia H/C</span> C</div>
 							<div class="breadcrumbs">
 								<ul>
 									<li><a href="#">Home</a></li>
@@ -188,15 +188,13 @@
 
 						<!-- Google Map -->
 						
-						<div id="map"></div>
+						<div class="map">
+							<div id="google_map" class="google_map">
+								<div class="mapouter"><div class="gmap_canvas"><iframe width="100%" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=kampala&t=k&z=19&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net">custom google maps for website</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
+							</div>
+						</div>
 
-    <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap&libraries=&v=weekly"
-      async
-    ></script>
-
-						<!-- Working Hours -->
+						<!-- Working Hours 
 						<div class="box working_hours">
 							<div class="box_icon d-flex flex-column align-items-start justify-content-center"><div style="width:29px; height:29px;"><img src="images/alarm-clock.svg" alt=""></div></div>
 							<div class="box_title">Working Hours</div>
@@ -216,7 +214,7 @@
 									</li>
 								</ul>
 							</div>
-						</div>
+						</div>-->
 
 					</div>
 
