--- a/news.html
+++ b/news.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Contact</title>
+<title>News</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="Maria Healthcare">
@@ -11,8 +11,8 @@
 <link rel="stylesheet" type="text/css" href="plugins/OwlCarousel2-2.2.1/owl.carousel.css">
 <link rel="stylesheet" type="text/css" href="plugins/OwlCarousel2-2.2.1/owl.theme.default.css">
 <link rel="stylesheet" type="text/css" href="plugins/OwlCarousel2-2.2.1/animate.css">
-<link rel="stylesheet" type="text/css" href="styles/contact.css">
-<link rel="stylesheet" type="text/css" href="styles/contact_responsive.css">
+<link rel="stylesheet" type="text/css" href="styles/news.css">
+<link rel="stylesheet" type="text/css" href="styles/news_responsive.css">
 </head>
 <body>
 
@@ -49,7 +49,7 @@
 									<li><a href="index.html">Home</a></li>
 									<li><a href="about.html">About us</a></li>
 									<li><a href="services.html">Services</a></li>
-									<li><a href="gallery.html">Galler</a></li>
+									<li><a href="news.html">News</a></li>
 									<li><a href="contact.html">Contact</a></li>
 								</ul>
 							</nav>
@@ -121,17 +121,17 @@
 	<!-- Home -->
 
 	<div class="home">
-		<div class="home_background parallax-window" data-parallax="scroll" data-image-src="images/contact.jpg" data-speed="0.8"></div>
+		<div class="home_background parallax-window" data-parallax="scroll" data-image-src="images/news.jpg" data-speed="0.8"></div>
 		<div class="home_container">
 			<div class="container">
 				<div class="row">
 					<div class="col">
 						<div class="home_content">
-							<div class="home_title"><span>Maraia H/C</span> C</div>
+							<div class="home_title"><span>Maria Healthcenter</span> Gallery</div>
 							<div class="breadcrumbs">
 								<ul>
 									<li><a href="#">Home</a></li>
-									<li>Contact</li>
+									<li>Gallery</li>
 								</ul>
 							</div>
 						</div>
@@ -141,87 +141,9 @@
 		</div>
 	</div>
 
-	<!-- Contact -->
+	<!-- News -->
 
-	<div class="contact">
-		<div class="container">
-			<div class="row">
 
-				<!-- Contact Info -->
-				<div class="col-lg-6">
-					<div class="section_title"><h2>Get in touch</h2></div>
-					<div class="contact_text">
-						<p></p>
-					</div>
-					<ul class="contact_about_list">
-						<li><div class="contact_about_icon"><img src="images/phone-call.svg" alt=""></div><span>+256 7770000000</span></li>
-						<li><div class="contact_about_icon"><img src="images/envelope.svg" alt=""></div><span>office@template.com</span></li>
-						<li><div class="contact_about_icon"><img src="images/placeholder.svg" alt=""></div><span>Main Str. no 45-46, b3, 56832,Kampala</span></li>
-					</ul>
-				</div>
-
-				<!-- Contact Form -->
-				<div class="col-lg-6 form_col">
-					<div class="contact_form_container">
-						<form action="#" id="contact_form" class="contact_form">
-							<div class="row">
-								<div class="col-md-6 input_col">
-									<div class="input_container input_name"><input type="text" class="contact_input" placeholder="Name" required="required"></div>
-								</div>
-								<div class="col-md-6 input_col">
-									<div class="input_container"><input type="email" class="contact_input" placeholder="E-mail" required="required"></div>
-								</div>
-							</div>
-							<div class="input_container"><input type="text" class="contact_input" placeholder="Subject" required="required"></div>
-							<div class="input_container"><textarea class="contact_input contact_text_area" placeholder="Message" required="required"></textarea></div>
-							<button class="button contact_button"><a href="#">send</a></button>
-						</form>
-					</div>
-				</div>
-			</div>
-			<div class="row map_row">
-				<div class="col">
-
-					<!-- Contact Map -->
-
-					<div class="contact_map">
-
-						<!-- Google Map -->
-						
-						<div class="map">
-							<div id="google_map" class="google_map">
-								<div class="mapouter"><div class="gmap_canvas"><iframe width="100%" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=kampala&t=k&z=19&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net">custom google maps for website</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
-							</div>
-						</div>
-
-						<!-- Working Hours 
-						<div class="box working_hours">
-							<div class="box_icon d-flex flex-column align-items-start justify-content-center"><div style="width:29px; height:29px;"><img src="images/alarm-clock.svg" alt=""></div></div>
-							<div class="box_title">Working Hours</div>
-							<div class="working_hours_list">
-								<ul>
-									<li class="d-flex flex-row align-items-center justify-content-start">
-										<div>Monday – Friday</div>
-										<div class="ml-auto">8.00 – 19.00</div>
-									</li>
-									<li class="d-flex flex-row align-items-center justify-content-start">
-										<div>Saturday</div>
-										<div class="ml-auto">9.30 – 17.00</div>
-									</li>
-									<li class="d-flex flex-row align-items-center justify-content-start">
-										<div>Sunday</div>
-										<div class="ml-auto">9.30 – 15.00</div>
-									</li>
-								</ul>
-							</div>
-						</div>-->
-
-					</div>
-
-				</div>
-			</div>
-		</div>
-	</div>
 
 	<!-- Footer -->
 
@@ -266,7 +188,7 @@
 							<div class="footer_title">Useful Links</div>
 							<ul>
 								<li>
-									<div class="footer_news_title"><a href="gallery.html">Our Gallery</a></div>
+									<div class="footer_news_title"><a href="news.html">Our News</a></div>
 									<div class="footer_news_date">Feb 10, 2020</div>
 								</li>
 							
@@ -308,7 +230,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <script src="styles/bootstrap4/bootstrap.min.js"></script>
 <script src="plugins/easing/easing.js"></script>
 <script src="plugins/parallax-js-master/parallax.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyCIwF204lFZg1y4kPSIhKaHEXMLYxxuMhA"></script>
-<script src="js/contact.js"></script>
+<script src="js/news.js"></script>
 </body>
 </html>
